--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My DnD Tools</title>
+    <title>Welcome to My Stuffss</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Welcome to Hazard Projects</h1>
+    <h1>Welcome to Hazard's Projects</h1>
     <nav>
         <ul>
+            <li><a href="BroloLeveling/brolvl.html">Brolo Leveling</a></li>
             <li><a href="DiceRoller/diceroller.html">Dice Roller</a></li>
             <li><a href="RollDisplay/rolldisplay.html">Roll Display</a></li>
         </ul>
